#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2cmy     LuvCH2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2cmyk     LuvCH2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2gray     LuvCH2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2hsi     LuvCH2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2hsl     LuvCH2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2hsv     LuvCH2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2hwb     LuvCH2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lab     LuvCH2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lab_CIE     LuvCH2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lab_Hunter     LuvCH2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2LabCH     LuvCH2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lms     LuvCH2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lms_BFD     LuvCH2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lms_K65     LuvCH2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lms_KE     LuvCH2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2lms_MCAT02     LuvCH2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2luv     LuvCH2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2LuvCH     LuvCH2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2rgb     LuvCH2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2xyy     LuvCH2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2xyz     LuvCH2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2YCgCo     LuvCH2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2YDbDr     LuvCH2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2yiq     LuvCH2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2YPbPr     LuvCH2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2YPbPr2020     LuvCH2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2YPbPr601     LuvCH2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2YPbPr709     LuvCH2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2yuv     LuvCH2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2yuv601     LuvCH2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__LuvCH__LuvCH2yuv709     LuvCH2yuv709.cpp )
