#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2cmy      YCgCo2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2cmyk      YCgCo2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2gray      YCgCo2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2hsi      YCgCo2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2hsl      YCgCo2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2hsv      YCgCo2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2hwb      YCgCo2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lab      YCgCo2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lab_CIE      YCgCo2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lab_Hunter      YCgCo2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2LabCH      YCgCo2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lms      YCgCo2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lms_BFD      YCgCo2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lms_K65      YCgCo2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lms_KE      YCgCo2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2lms_MCAT02      YCgCo2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2luv      YCgCo2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2LuvCH      YCgCo2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2rgb      YCgCo2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2xyy      YCgCo2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2xyz      YCgCo2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2YCgCo      YCgCo2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2YDbDr      YCgCo2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2yiq      YCgCo2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2YPbPr      YCgCo2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2YPbPr2020      YCgCo2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2YPbPr601      YCgCo2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2YPbPr709      YCgCo2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2yuv      YCgCo2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2yuv601      YCgCo2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__YCgCo__YCgCo2yuv709      YCgCo2yuv709.cpp )
