#cmake_minimum_required(VERSION 2.8)

#TODO

add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2cmy      YDbDr2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2cmyk      YDbDr2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2gray      YDbDr2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2hsi      YDbDr2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2hsl      YDbDr2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2hsv      YDbDr2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2hwb      YDbDr2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lab      YDbDr2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lab_CIE      YDbDr2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lab_Hunter      YDbDr2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2LabCH      YDbDr2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lms      YDbDr2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lms_BFD      YDbDr2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lms_K65      YDbDr2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lms_KE      YDbDr2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2lms_MCAT02      YDbDr2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2luv      YDbDr2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2LuvCH      YDbDr2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2rgb      YDbDr2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2xyy      YDbDr2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2xyz      YDbDr2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2YCgCo      YDbDr2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2YDbDr      YDbDr2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2yiq      YDbDr2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2YPbPr      YDbDr2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2YPbPr2020      YDbDr2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2YPbPr601      YDbDr2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2YPbPr709      YDbDr2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2yuv      YDbDr2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2yuv601      YDbDr2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__YDbDr__YDbDr2yuv709      YDbDr2yuv709.cpp )
