#cmake_minimum_required(VERSION 2.8)

#TODO

add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2cmy      YPbPr2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2cmyk      YPbPr2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2gray      YPbPr2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2hsi      YPbPr2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2hsl      YPbPr2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2hsv      YPbPr2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2hwb      YPbPr2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lab      YPbPr2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lab_CIE      YPbPr2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lab_Hunter      YPbPr2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2LabCH      YPbPr2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lms      YPbPr2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lms_BFD      YPbPr2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lms_K65      YPbPr2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lms_KE      YPbPr2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2lms_MCAT02      YPbPr2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2luv      YPbPr2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2LuvCH      YPbPr2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2rgb      YPbPr2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2xyy      YPbPr2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2xyz      YPbPr2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2YCgCo      YPbPr2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2YDbDr      YPbPr2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2yiq      YPbPr2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2YPbPr      YPbPr2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2YPbPr2020      YPbPr2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2YPbPr601      YPbPr2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2YPbPr709      YPbPr2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2yuv      YPbPr2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2yuv601      YPbPr2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__YPbPr__YPbPr2yuv709      YPbPr2yuv709.cpp )































