#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2cmy              cmy2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2cmyk              cmy2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2gray              cmy2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2hsi              cmy2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2hsl              cmy2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2hsv              cmy2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2hwb              cmy2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lab              cmy2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lab_CIE              cmy2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lab_Hunter               cmy2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2LabCH              cmy2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lms              cmy2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lms_BFD              cmy2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lms_K65              cmy2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lms_KE              cmy2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2lms_MCAT02               cmy2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2luv              cmy2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2LuvCH              cmy2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2rgb              cmy2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2tsl              cmy2tsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2xyy              cmy2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2xyz              cmy2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2YCgCo              cmy2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2YDbDr              cmy2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2yiq              cmy2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2YPbPr              cmy2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2YPbPr2020              cmy2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2YPbPr601              cmy2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2YPbPr709              cmy2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2yuv              cmy2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2yuv601              cmy2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmy__cmy2yuv709              cmy2yuv709.cpp )

