#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2cmy              cmyk2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2cmyk              cmyk2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2gray              cmyk2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2hsi              cmyk2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2hsl              cmyk2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2hsv              cmyk2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2hwb              cmyk2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lab              cmyk2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lab_CIE              cmyk2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lab_Hunter              cmyk2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2LabCH              cmyk2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lms              cmyk2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lms_BFD              cmyk2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lms_K65              cmyk2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lms_KE              cmyk2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2lms_MCAT02              cmyk2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2luv              cmyk2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2LuvCH              cmyk2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2rgb              cmyk2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2xyy              cmyk2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2xyz              cmyk2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2YCgCo              cmyk2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2YDbDr              cmyk2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2yiq              cmyk2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2YPbPr              cmyk2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2YPbPr2020              cmyk2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2YPbPr601              cmyk2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2YPbPr709              cmyk2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2yuv              cmyk2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2yuv601              cmyk2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__cmyk__cmyk2yuv709              cmyk2yuv709.cpp )
