#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__const__cmy             cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__cmyk             cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__gray             gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__hsi             hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__hsl            hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__hsv             hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__hwb             hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__lab             lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__lab_CIE             lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__lab_Hunter             lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__LabCH             LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__lms             lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__luv             luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__LuvCH             LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__rgb             rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__xyy             xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__xyz             xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__YCgCo             YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__YDbDr             YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__yiq             yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__YPbPr             YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__YPbPr2020             YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__YPbPr601             YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__YPbPr709             YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__yuv             yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__yuv601             yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__const__yuv709             yuv709.cpp )
