#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__gray__gray2cmy          gray2cmy.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2cmyk          gray2cmyk.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2gray          gray2gray.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2hsi          gray2hsi.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2hsl          gray2hsl.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2hsv          gray2hsv.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2hwb          gray2hwb.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lab          gray2lab.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lab_CIE          gray2lab_CIE.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lab_Hunter          gray2lab_Hunter.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2labCH          gray2labCH.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lms          gray2lms.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lms_BFD          gray2lms_BFD.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lms_K65          gray2lms_K65.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lms_KE          gray2lms_KE.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2lms_MCAT02          gray2lms_MCAT02.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2luv          gray2luv.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2LuvCH          gray2LuvCH.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2rgb          gray2rgb.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2xyy          gray2xyy.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2xyz          gray2xyz.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2YCgCo          gray2YCgCo.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2YDbDr          gray2YDbDr.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2yiq          gray2yiq.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2YPbPr          gray2YPbPr.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2YPbPr2020          gray2YPbPr2020.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2YPbPr601          gray2YPbPr601.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2YPbPr709          gray2YPbPr709.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2yuv          gray2yuv.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2yuv601          gray2yuv601.cpp     )
add_executable(   ColorExample__less-than-1k__assign__gray__gray2yuv709          gray2yuv709.cpp     )
