#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2cmy         hsi2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2cmyk         hsi2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2gray         hsi2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2hsi         hsi2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2hsl         hsi2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2hsv         hsi2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2hwb         hsi2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lab         hsi2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lab_CIE         hsi2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lab_Hunter         hsi2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2LabCH         hsi2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lms         hsi2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lms_BFD         hsi2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lms_K65         hsi2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lms_KE         hsi2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2lms_MCAT02         hsi2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2luv         hsi2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2LuvCH         hsi2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2rgb         hsi2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2xyy         hsi2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2xyz         hsi2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2YCgCo         hsi2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2YDbDr         hsi2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2yiq         hsi2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2YPbPr         hsi2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2YPbPr2020         hsi2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2YPbPr601         hsi2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2YPbPr709         hsi2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2yuv         hsi2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2yuv601         hsi2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsi__hsi2yuv709         hsi2yuv709.cpp )
