#cmake_minimum_required(VERSION 2.8)


add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2cmy         hsl2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2cmyk         hsl2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2gray         hsl2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2hsi         hsl2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2hsl         hsl2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2hsv         hsl2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2hwb         hsl2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lab         hsl2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lab_CIE         hsl2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lab_Hunter         hsl2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2LabCH         hsl2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lms         hsl2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lms_BFD         hsl2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lms_K65         hsl2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lms_KE         hsl2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2lms_MCAT02         hsl2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2luv         hsl2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2LuvCH         hsl2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2rgb         hsl2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2xyy         hsl2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2xyz         hsl2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2YCgCo         hsl2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2YDbDr         hsl2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2yiq         hsl2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2YPbPr         hsl2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2YPbPr2020         hsl2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2YPbPr601         hsl2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2YPbPr709         hsl2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2yuv          hsl2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2yuv601         hsl2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsl__hsl2yuv709         hsl2yuv709.cpp )

































