#cmake_minimum_required(VERSION 2.8)


add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2cmy           hsv2cmy.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2cmyk          hsv2cmyk.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2gray          hsv2gray.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2hsi           hsv2hsi.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2hsl           hsv2hsl.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2hsv           hsv2hsv.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2hwb           hsv2hwb.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lab           hsv2lab.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lab_CIE       hsv2lab_CIE.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lab_Hunter    hsv2lab_Hunter.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2LabCH         hsv2LabCH.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lms           hsv2lms.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lms_BFD       hsv2lms_BFD.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lms_K65       hsv2lms_K65.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lms_KE        hsv2lms_KE.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2lms_MCAT02    hsv2lms_MCAT02.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2luv           hsv2luv.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2LuvCH         hsv2LuvCH.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2rgb           hsv2rgb.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2xyy           hsv2xyy.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2xyz           hsv2xyz.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2YCgCo         hsv2YCgCo.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2YDbDr         hsv2YDbDr.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2yiq           hsv2yiq.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2YPbPr         hsv2YPbPr.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2YPbPr2020     hsv2YPbPr2020.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2YPbPr601      hsv2YPbPr601.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2YPbPr709      hsv2YPbPr709.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2yuv           hsv2yuv.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2yuv601        hsv2yuv601.cpp)
add_executable(   ColorExample__less-than-1k__assign__hsv__hsv2yuv709        hsv2yuv709.cpp)

