#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2cmy   hwb2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2cmyk   hwb2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2gray   hwb2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2hsi   hwb2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2hsl   hwb2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2hsv   hwb2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2hwb   hwb2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lab   hwb2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lab_CIE   hwb2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lab_Hunter   hwb2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2labCH   hwb2labCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lms   hwb2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lms_BFD   hwb2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lms_K65   hwb2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lms_KE   hwb2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2lms_MCAT02   hwb2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2luv   hwb2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2LuvCH   hwb2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2rgb   hwb2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2xyy   hwb2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2xyz   hwb2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2YCgCo   hwb2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2YDbDr   hwb2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2yiq   hwb2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2YPbPr   hwb2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2YPbPr2020   hwb2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2YPbPr601   hwb2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2YPbPr709   hwb2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2yuv   hwb2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2yuv601   hwb2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hwb__hwb2yuv709   hwb2yuv709.cpp )































