#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__hsv__lab2cmy       lab2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2cmyk       lab2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2gray       lab2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2hsi       lab2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2hsl       lab2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2hsv       lab2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2hwb       lab2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lab       lab2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lab_CIE       lab2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lab_Hunter         lab2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2LabCH       lab2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lms       lab2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lms_BFD       lab2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lms_K65       lab2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lms_KE       lab2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2lms_MCAT02       lab2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2luv       lab2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2LuvCH       lab2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2rgb       lab2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2xyy       lab2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2xyz       lab2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2YCgCo       lab2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2YDbDr       lab2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2yiq       lab2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2YPbPr       lab2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2YPbPr2020       lab2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2YPbPr601       lab2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2YPbPr709       lab2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2yuv       lab2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2yuv601       lab2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__hsv__lab2yuv709       lab2yuv709.cpp )
