#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__lms__lms2cmy     lms2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2cmyk     lms2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2gray     lms2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2hsi     lms2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2hsl     lms2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2hsv     lms2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2hwb     lms2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lab     lms2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lab_CIE     lms2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lab_Hunter     lms2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2LabCH     lms2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lms     lms2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lms_BFD     lms2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lms_K65     lms2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lms_KE     lms2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2lms_MCAT02     lms2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2luv     lms2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2LuvCH     lms2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2rgb     lms2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2xyy     lms2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2xyz     lms2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2YCgCo     lms2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2YDbDr     lms2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2yiq     lms2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2YPbPr     lms2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2YPbPr2020     lms2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2YPbPr601     lms2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2YPbPr709     lms2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2yuv     lms2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2yuv601     lms2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__lms__lms2yuv709     lms2yuv709.cpp )































