#cmake_minimum_required(VERSION 2.8)

add_executable(   ColorExample__less-than-1k__assign__luv__luv2cmy      luv2cmy.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2cmyk      luv2cmyk.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2gray      luv2gray.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2hsi      luv2hsi.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2hsl      luv2hsl.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2hsv      luv2hsv.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2hwb      luv2hwb.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lab      luv2lab.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lab_CIE      luv2lab_CIE.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lab_Hunter.cpp        luv2lab_Hunter.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2LabCH      luv2LabCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lms      luv2lms.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lms_BFD      luv2lms_BFD.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lms_K65      luv2lms_K65.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lms_KE      luv2lms_KE.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2lms_MCAT02.cpp        luv2lms_MCAT02.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2luv      luv2luv.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2LuvCH      luv2LuvCH.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2rgb      luv2rgb.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2xyy      luv2xyy.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2xyz      luv2xyz.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2YCgCo      luv2YCgCo.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2YDbDr      luv2YDbDr.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2yiq      luv2yiq.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2YPbPr      luv2YPbPr.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2YPbPr2020      luv2YPbPr2020.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2YPbPr601      luv2YPbPr601.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2YPbPr709      luv2YPbPr709.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2yuv      luv2yuv.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2yuv601      luv2yuv601.cpp )
add_executable(   ColorExample__less-than-1k__assign__luv__luv2yuv709      luv2yuv709.cpp )































